Adding navbar with links to the new pages

--- a/javascript.html
+++ b/javascript.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dylan's Cheatsheets</title>
+        <title>Javascript</title>
         <meta name="author" description="Dylan Gordon">
     </head>
 
