--- a/css.html
+++ b/css.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>CSS</title>
+        <link rel="stylesheet" href="styles.css">
         <meta name="author" description="Dylan Gordon">
     </head>
 
@@ -9,7 +10,7 @@
         <!-- nav bar -->
         <ul id="topNavBar">
             <li class="title">Dylan's Cheatsheets</li>
-            <li href="index.html">Home</li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="html.html">HTML</a></li>
             <li><a href="css.html">CSS</a></li>
             <li><a href="javascript.html">Javascript</a></li>
