--- a/html.html
+++ b/html.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <meta content="utf-8" http-equiv="encoding">
         <title>HTML</title>
         <link rel="stylesheet" href="styles.css">
         <meta name="author" description="Dylan Gordon">
@@ -15,7 +17,53 @@
             <li><a href="css.html">CSS</a></li>
             <li><a href="javascript.html">Javascript</a></li>
         </ul>
-        <!-- Introduction explaining to click on the links above to see how different languages work -->
-    </body>
 
+        <br>
+        <img src="pictures/ExampleHtmlCode.PNG" class="center">
+        <p>
+            <center>Seeing the image above, HTML can look daunting to the unfamiliar eye, however I assure you it is easy to learn. See the table below for a few helpful html elements you will be using everytime you create a webpage.</center>
+        </p>
+        <br>
+
+        <!-- Table with different html elements that can be used -->
+        <table class="center darkTheme">
+            <tr class="header">
+                <th>HTML Element</th>
+                <th>Purpose</th>
+                <th>Closing tag?</th>
+            </tr>
+
+            <tr>
+                <td>html</td>
+                <td>Used at the start of the HTML document</td>
+                <td>&#x2713 and &#x2718</td>
+            </tr>
+            <tr>
+                <td>body</td>
+                <td>All visible parts of the html will be contained in the body element</td>
+                <td>&#x2713</td>
+            </tr>
+            <tr>
+                <td>head</td>
+                <td>Used to store website metadata. Ex: To see who authored this page</td>
+                <td>&#x2713</td>
+            </tr>
+            <tr>
+                <td>br</td>
+                <td>Is the equivalent of using the newline character in the middle of your webpage.</td>
+                <td>&#x2718</td>
+            </tr>
+            <tr>
+                <td>h1 ... h6</td>
+                <td>Used to create different styled headers with the largest being h1 and the smallest being h6.</td>
+                <td>&#x2713</td>
+            </tr>
+            <tr>
+                <td>table</td>
+                <td>Can create a table such as the one we are currently using</td>
+                <td>&#x2713</td>
+            </tr>
+
+        </table>
+    </body>
 </html>
