--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <meta content="utf-8" http-equiv="encoding">
         <title>Dylan's Cheatsheets</title>
         <link rel="stylesheet" href="styles.css">
         <meta name="author" description="Dylan Gordon">
+
     </head>
 
     <body>
@@ -16,6 +19,9 @@
             <li><a href="javascript.html">Javascript</a></li>
         </ul>
         <!-- Introduction explaining to click on the links above to see how different languages work -->
+        <p>
+            This website is aimed at just providing raw information with examples as a cheatsheet to basic web development. Click on any of the links at the top to get started.
+        </p>
     </body>
 
 </html>
